--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
   <link rel="stylesheet" href="css/icons/bootstrap-icons.min.css">
   <link rel="stylesheet" href="css/theme.css">
   <link rel="stylesheet" href="css/styles.css">
+  <script type="importmap">
+    {
+      "imports": {
+        "events": "./modules/events/EventEmitter.js"
+      }
+    }
+  </script>
+
 </head>
 <body>
-
   <subway-builder></subway-builder>
   <script type="module" src="src/component.js"></script>
-
 </body>
 </html>
